# crm-real-estate

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py
app/core/: config.py  security.py
app/db/: bootstrap.py  seed.py  session.py
app/models/: __init__.py  agency.py  audit_log.py  call_record.py  contact_identity.py  contact_identity_link.py  deal.py  discovered_source.py  enums.py  graph_edge.py  graph_edge_evidence.py  graph_feature_snapshot.py  graph_fuzzy_match.py  graph_node.py  job_run.py  lead.py  lead_event.py  market_benchmark.py  parser_result.py  parser_run.py  parser_source.py  parser_template.py  property.py  scheduled_job.py  source_activation_event.py  source_discovery_run.py  source_frontier.py  source_health_check.py  source_link.py  source_parse_run.py  source_seed.py  source_state_history.py  source_template_match.py  user.py
app/schemas/: auth.py  autonomy.py  call.py  common.py  dashboard.py  deal.py  discovery.py  lead.py  owner_intel.py  parser.py  property.py  user.py
app/services/: __init__.py  audit.py  autonomy_jobs.py  conversion.py  dedup.py  fuzzy_matching.py  graph_builder.py  graph_features.py  lead_scoring.py  market_benchmarks.py  owner_intelligence.py  parser_collectors.py  parser_ingest.py  parser_orchestrator.py  parser_scheduler.py  parser_scoring.py  publishing.py  source_discovery.py  source_health.py  transcription.py
docs/: parser_hub_blueprint.md
scripts/: generate_telegram_session.py  run_parser.py
tests/: test_dedup.py  test_parser_collectors.py
(+17 files in other folders)
